[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
anyhow = "1"
chumsky = "0.8"
nom = "7"
hashbrown = "0.13"
rayon = "1.6"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
